Página Básica Principal

--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="Img/logo.png" />
+<style>
+  
+h1 {
+  /*AQUI VAN LAS ESPECIFICACIONES DEL HEADER*/
+  font-family:cursive;
+  font-size:40px;
+  text-align:center;
+  font-style: oblique;
+  color:orange;
+}
+
+h2{
+  font-family: fantasy;
+  text-align:left;
+  font-size:40px;
+} 
+
+th{
+  font-family:serif;
+  text-align:center;
+  font-size:20px;
+} 
+
+td{
+  font-family:serif;
+  text-align:justify;
+  font-size:20px;
+  vertical-align: text-top; 
+  border: 10px solid white;
+} 
+
+table {
+  border-collapse: separate;
+  border-spacing: 10px;
+}
+
+body, html {
+  height: 100%;
+}
+  
+</style>
+
+<title>ChibchaWeb Pagina Principal</title>
 </head>
 <body>
+      
+<div style="overflow-x:auto" class="section">
+
+<h1>¿Quiénes somos?</h1>
+
+<table style="width: 90% " align="center" >
+  <tr>
+    <th>Sobre Nosotros.</th>
+    <th>Misión.</th>
+    <th>Visión.</th>
     
+  </tr>
+  <tr>
+    <td style="width: 30%">ChibchaWeb es una empresa de hospedaje de páginas Web ubicada en Sugamuxi. Sus clientes están localizados en Colombia y países aledaños. </td>
+    <td style="width: 30%">Brindar dominios de calidad a todos sus clientes con el fin de impulsar su crecimiento y presencia en la web. </td>
+    <td style="width: 30%">Se espera que en los próximos meses se cuente con clientes de África.</td>
+    </tr>
+  </table>
+ </div>
+
 </body>
 </html>
