--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Bootstrap core CSS -->
 <script src="Librerias/Bootstrap/js/bootstrap.js"></script>
 <link rel="stylesheet" type="text/css" href="Librerias/Bootstrap/css/bootstrap.css">
+
 <link rel="shortcut icon" href="Img/loguito.png" />
-<link rel="stylesheet" type="text/css" href="Css/Slideshow.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="Css/Slideshow.css" media="screen" />
 <script src="Js/Slidesshow.js"></script>
 <style>
   
 h1 {
   /*AQUI VAN LAS ESPECIFICACIONES DEL HEADER*/
-  
+  font-family: cursive;
+  font-style: oblique;
   font-size:40px;
   text-align:center;
   color:orange;
 }
 
 h2{
- /* font-family: fantasy;*/
+  font-family: fantasy;
   text-align:left;
   font-size:40px;
 } 
@@ -45,6 +47,9 @@ table {
   border-spacing: 10px;
 }
 
+.first {
+  background-color: rgba(235, 148, 35, 0.842);
+}
   
 </style>
 
@@ -52,8 +57,8 @@ table {
 </head>
 
 <body>
-<div class="section">
-  <div class="btn-toolbar justify-content-between" >
+<div class="section ">
+  <div class="btn-toolbar justify-content-between " >
     <div class="btn-group" role="group">
         <img src="Img/logo.png" alt="LogoChibchaWeb" hspace="40px" vspace="30px">
     </div>
@@ -63,12 +68,12 @@ table {
     </div>
   </div>
   
-
-<h1 >¿Quiénes somos?</h1>
+<div class="first">
+<h1 style="color: black;">¿Quiénes somos?</h1>
 
 <br><br>
 
-<div class="slideshow-container" align="center">
+<div class="slideshow-container " align="center">
 
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
@@ -107,7 +112,7 @@ table {
     <td style="width: 30%">Se espera que en los próximos meses se cuente con clientes de África.</td>
     </tr>
   </table>
-
+</div>
     
   <hr class="featurette-divider">
 
