Archivos phpStorm, Cambio varios

--- a/presentacion/index.html
+++ b/presentacion/index.html
@@ -53,8 +53,8 @@
          
         </ul>
         <form class="d-flex">
-            <button type="button"  class="btn btn-link  ">Registrarme</button>
-            <button type="button" onclick="location.href='login.php'"class="btn btn-success" >Iniciar Sesión</button>
+          <button type="button" onclick="location.href='../registro.html'"class="btn btn-success me-2" >Registrarse</button>
+          <button type="button" onclick="location.href='../login.php'"class="btn btn-success me-2" >Iniciar Sesión</button>
         </form>
       </div>
     </div>
@@ -131,19 +131,19 @@
         <img src="../Img/plata.png" alt="LogoOro" style="width:70% ">
         <h2>Chibcha-Plata</h2>
         <p>5000 mensual - 50.000 anual.<br>  1 cuenta de correo - 2 bases de datos.<br> 1 solo sitio web - 50 gigas almacenamiento.<br></p>
-        <p><a class="btn btn-success" onclick="location.href='paquetes.html'">Obtener &raquo;</a></p>
+        <p><a class="btn btn-success" href="#">Obtener &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="../Img/oro.png" alt="LogoOro" style="width:70% ">
         <h2>Chibcha-Oro</h2>
         <p>10.000 mensual - 100.000 anual <br>100 cuentas de correo - 5 bases de datos.<br> 10 sitios web - 100 gigas almacenamiento. </p>
-        <p><a class="btn btn-success" onclick="location.href='paquetes.html'">Obtener &raquo;</a></p>
+        <p><a class="btn btn-success" href="#">Obtener &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="../Img/platino.png" alt="LogoOro" style="width:70% ">
         <h2>Chibcha-Platino</h2>
         <p>15.000 mensual - 120.000 anual <br> &infin; cuentas de correo - &infin; bases de datos.<br> 200 sitios web - 200 gigas almacenamiento. </p>
-        <p><a class="btn btn-success" onclick="location.href='paquetes.html'">Obtener &raquo;</a></p>
+        <p><a class="btn btn-success" href="#">Obtener &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
