--- a/Presentacion/registro.html
+++ b/Presentacion/registro.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="Css/registro.css">
+  <link rel="stylesheet" href="../Css/registro.css">
 </head>
 <body>
   <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
@@ -16,7 +16,7 @@
       <div class="card login-card">
         <div class="row no-gutters">
           <div class="col-md-5">
-            <img src="Img/log.png" alt="login" class="login-card-img">
+            <img src="../Img/log.png" alt="login" class="login-card-img">
           </div>
           <div class="col-md-7">
             <div class="card-body">
