--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </ul>
         <form class="d-flex">
             <button type="button"  class="btn btn-link  ">Registrarme</button>
-            <button type="button" onclick="location.href='login.php'"class="btn btn-success" >Iniciar Sesión</button>
+            <button type="button" onclick="location.href='Presentacion/login.php'"class="btn btn-success" >Iniciar Sesión</button>
         </form>
       </div>
     </div>
