cambios visuales y redirecciones del registro

--- a/Presentacion/registro.html
+++ b/Presentacion/registro.html
@@ -51,6 +51,7 @@
                   </div>
                   <input name="registro" id="registro" class="btn btn-block login-btn mb-4" type="submit" value="Registrate" >
                 </form>
+                <p class="login-card-back"><a href="../index.html" class="text-reset">Regresar a la Página Principal.</a></p>
                 <center>
             </div>
           </div>
