--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
          
         </ul>
         <form class="d-flex">
-            <button type="button"  class="btn btn-link  ">Registrarme</button>
-            <button type="button" onclick="location.href='Presentacion/login.php'"class="btn btn-success" >Iniciar Sesión</button>
+            <button type="button"  onclick="location.href='Presentacion/registro.html'"class="btn btn-success">Registrarme</button>
+            <button type="button"  onclick="location.href='Presentacion/login.php'"class="btn btn-success" >Iniciar Sesión</button>
         </form>
       </div>
     </div>
