--- a/Presentacion/registro.html
+++ b/Presentacion/registro.html
@@ -49,7 +49,7 @@
                     <label for="repassword" class="sr-only">Confirmar Clave</label>
                     <input type="password" name="repassword" id="repassword" class="form-control" placeholder="Confirmar Contraseña">
                   </div>
-                  <input name="registro" id="registro" class="btn btn-block login-btn mb-4" type="submit" value="Registrate" >
+                  <input name="registro" id="registro" class="btn btn-block login-btn mb-4" style="background-color: green;" type="submit" value="Registrate" >
                 </form>
                 <p class="login-card-back"><a href="../index.html" class="text-reset">Regresar a la Página Principal.</a></p>
                 <center>
