--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p><center> <img src="Img/logo.png" style="width:15%"></center></p>
             <h1>Sobre Nosotros.</h1>
             <p>ChibchaWeb es una empresa de hospedaje de páginas Web ubicada en Sugamuxi. Sus clientes están localizados en Colombia y países aledaños. </p>
-            <p><center><a class="btn btn-lg btn-success" href="#">Unirme</a></center></p>
+            <p><center><a class="btn btn-lg btn-success" href="Presentacion/registro.html">Unirme</a></center></p>
           </div>
         </div>
       </div>
@@ -131,19 +131,19 @@
         <img src="Img/plata.png" alt="LogoOro" style="width:70% ">
         <h2>Chibcha-Plata</h2>
         <p>5000 mensual - 50.000 anual.<br>  1 cuenta de correo - 2 bases de datos.<br> 1 solo sitio web - 50 gigas almacenamiento.<br></p>
-        <p><a class="btn btn-success" href="#">Obtener &raquo;</a></p>
+        <p><a class="btn btn-success" href="Presentacion/login.php">Obtener &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="Img/oro.png" alt="LogoOro" style="width:70% ">
         <h2>Chibcha-Oro</h2>
         <p>10.000 mensual - 100.000 anual <br>100 cuentas de correo - 5 bases de datos.<br> 10 sitios web - 100 gigas almacenamiento. </p>
-        <p><a class="btn btn-success" href="#">Obtener &raquo;</a></p>
+        <p><a class="btn btn-success" href="Presentacion/login.php">Obtener &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="Img/platino.png" alt="LogoOro" style="width:70% ">
         <h2>Chibcha-Platino</h2>
         <p>15.000 mensual - 120.000 anual <br> &infin; cuentas de correo - &infin; bases de datos.<br> 200 sitios web - 200 gigas almacenamiento. </p>
-        <p><a class="btn btn-success" href="#">Obtener &raquo;</a></p>
+        <p><a class="btn btn-success" href="Presentacion/login.php">Obtener &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -180,7 +180,6 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">¿Dudas?<br> </h2>
         <p class="lead">Correo: brawebsolutions@gmail.com.</p>
-        <p><a class="btn btn-success" href="#">Contactanos &raquo;</a></p>
       </div>
       <div class="col-md-5">
         <img src="Img/clientes3.png" alt="LogoOro" style="width:100% ">
