--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
          
         </ul>
         <form class="d-flex">
-            <button type="button"  onclick="location.href='Presentacion/registro.html'"class="btn btn-success">Registrarme</button>
+            <button type="button"  onclick="location.href='Presentacion/registro.php'"class="btn btn-success">Registrarme</button>
             <button type="button"  onclick="location.href='Presentacion/login.php'"class="btn btn-success" >Iniciar Sesión</button>
         </form>
       </div>
@@ -82,7 +82,7 @@
             <p><center> <img src="Img/logo.png" style="width:15%"></center></p>
             <h1>Sobre Nosotros.</h1>
             <p>ChibchaWeb es una empresa de hospedaje de páginas Web ubicada en Sugamuxi. Sus clientes están localizados en Colombia y países aledaños. </p>
-            <p><center><a class="btn btn-lg btn-success" href="Presentacion/registro.html">Unirme</a></center></p>
+            <p><center><a class="btn btn-lg btn-success" href="Presentacion/registro.php">Unirme</a></center></p>
           </div>
         </div>
       </div>
